added Todo for contact/also added chatra

--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,41 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171507870-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-171507870-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-171507870-1');
-</script>
+      gtag("config", "UA-171507870-1");
+    </script>
+    <!-- Chatra {literal} -->
+    <script>
+      (function (d, w, c) {
+        w.ChatraID = "ejgyPpZFvashRkqkh";
+        var s = d.createElement("script");
+        w[c] =
+          w[c] ||
+          function () {
+            (w[c].q = w[c].q || []).push(arguments);
+          };
+        s.async = true;
+        s.src = "https://call.chatra.io/chatra.js";
+        if (d.head) d.head.appendChild(s);
+      })(document, window, "Chatra");
+    </script>
+    <!-- /Chatra {/literal} -->
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Brian Trang | Web Developer"
-    />
+    <meta name="description" content="Brian Trang | Web Developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -37,8 +55,10 @@
     <title>Brian Trang | Web Developer</title>
 
     <!-- FONT AWESOME KIT CODE -->
-    <script src="https://kit.fontawesome.com/a0295df6c6.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/a0295df6c6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
